# GYMAURA_NUTRITION_OPENROUTER_PROTOTYPE

./: .env.example  README.md  app.py  benchmark_fallback_growth_results.csv  main.py  pyproject.toml
benchmark_results/: v32_vs_v4flash_2026-04-26_23-31-40.csv  v32_vs_v4flash_2026-04-26_23-31-40_summary.json  v32_vs_v4flash_2026-04-27_18-45-16.csv  v32_vs_v4flash_2026-04-27_18-45-16_summary.json
data/: proposed_rows.backup.csv  proposed_rows.csv
scripts/: __init__.py  analyze_results.py  benchmark_fallback_growth.py  benchmark_v32_vs_v4flash.py  test_openai_provider.py
src/: data_prep.py  dataset_growth.py  evaluation.py  llm_provider.py  matcher.py  nutrition.py  nutrition_fallback.py  openrouter_extractor.py  pipeline.py  review_enricher.py  semicolon_parser.py
tests/: __init__.py  fallback_growth_benchmark_cases.py
